# VoltcraftGM70Rest

./: README.md
documentation/: gm70_connection.fzz  gm70_connection_cut.xcf
service/: .gitignore  99-gm70rest.rules  gm70rest.service.TEMPLATE  install_service.sh  start_gm70rest.sh.TEMPLATE
src/: .gitignore  CMakeLists.txt  build.sh  config_parser.cpp  config_parser.h  gm70_message.cpp  gm70_message.h  gm70_serial_connection.cpp  gm70_serial_connection.h  gm70rest_config.ini  main.cpp  msg_queue.cpp  msg_queue.h  rest_api.cpp  rest_api.h
src/inih/: INIReader.h
